	  has been chosen for authoritative features.
	- you can use single quotes in the config file, so it is possible
	  to specify TXT records in local data.
	- fixup small memory problem in implicit transparent zone creation.
	- test for implicit zone creation and multiple RR RRsets local data.
	- local-zone nodefault test.
	- show testbound testlist on commit.

27 November 2007: Wouter
	- per suggestion in rfc2308, replaced default max-ttl value with 1 day.
	- set size of msgparse lookup table to 32, from 1024, so that its size
	  is below the 2048 regional large size threshold, and does not cause
	  a call to malloc when a message is parsed.
	- update of memstats tool to print number of allocation calls.
	  This is what is taking time (not space) and indicates the avg size
	  of the allocations as well. region_alloc stat is removed.

22 November 2007: Wouter
	- noted EDNS in-the-middle dropping trouble as a TODO.
	  At this point theoretical, no user trouble has been reported.
	- added all default AS112 zones.
	- answers from local zone content.
		* positive answer, the rrset in question
		* nodata answer (exist, but not that type).
		* nxdomain answer (domain does not exist).
		* empty-nonterminal answer.
		* But not: wildcard, nsec, referral, rrsig, cname/dname,
			or additional section processing, NS put in auth.
	- test for correct working of static and transparent and couple
	  of important defaults (localhost, as112, reverses). 
	  Also checks deny and refuse settings.
	- fixup implicit zone generation and AA bit for NXDOMAIN on localdata.

21 November 2007: Wouter
	- local zone internal data setup.

20 November 2007: Wouter
	- 0.8 - str2list config support for double string config options.
	- local-zone and local-data options, config storage and documentation.

19 November 2007: Wouter
	- do not downcase NSEC and RRSIG for verification. Follows 
	  draft-ietf-dnsext-dnssec-bis-updates-06.txt.
	- fixup leaking unbound daemons at end of tests.